# alfa-ml-project

./: README.md  docker-compose.yaml
gateway_service/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
gateway_service/src/: api.py  app.py  schema.py
model_service/: pyproject.toml
model_service/models/: model.pkl
model_service/src/: app.py  dataset.py  metrics.py  schema.py  train.py  utils.py
