[project]
name = "api_gateway"
version = "0.0.1"
requires-python = ">= 3.9"
dependencies = [
    "scikit-learn==1.5.2",
    "pandas==2.2.3",
    "fastapi==0.115.0",
    "uvicorn==0.31.1",
    "httpx==0.27.2"
]
authors = [
  {name = "Ivan Markov", email = "ivan.markov@example.com"},
]
maintainers = [
  {name = "Ivan Markov", email = "ivan.markov@example.com"},
]
description = "API Gateway for ML predictions"
readme = "README.md"

[project.urls]
Repository = "https://github.com/me/spam.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"