[project]
name = "house_model_service"
version = "0.0.1"
requires-python = ">= 3.9"
dependencies = [
    "scikit-learn==1.5.2",
    "pandas==2.2.3",
    "fastapi==0.115.0",
    "uvicorn==0.31.1"
]
authors = [
  {name = "Ivan Markov", email = "ivan.markov@example.com"},
]
maintainers = [
  {name = "Ivan Markov", email = "ivan.markov@example.com"},
]
description = "ML Serivce for house price predictions"
readme = "README.md"

[project.urls]
Repository = "https://github.com/me/spam.git"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"